clusters/main/kubernetes/system/alert-remediation/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: alert-remediation
  labels:
    app.kubernetes.io/name: alert-remediation
    app.kubernetes.io/part-of: alerting
